<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/mainFragment"
    android:title="@string/main_menu_title"
    android:icon="@drawable/ic_home"
    />
<!--<item-->
<!--    android:id="@+id/messagesFragment"-->
<!--    android:title="@string/messages_menu_title"-->
<!--    android:icon="@drawable/ic_message"-->
<!--    />-->
    <item
        android:id="@+id/myHealthFragment"
        android:title="@string/health_menu_title"
        android:icon="@drawable/ic_baseline_health_and_safety_24"
        />

<!--    <item-->
<!--        android:id="@+id/notificationFragment"-->
<!--        android:title="@string/notification_menu_title"-->
<!--        android:icon="@drawable/ic_notifications"-->
<!--        />-->

    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile_menu_title"
        android:icon="@drawable/ic_profile"
        />


    <item
        android:id="@+id/doctorAdminFragment"
        android:title="Врач"
        android:icon="@drawable/ic_baseline_medical_services_24"
        />


</menu>
