<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.medapp.presentation.fragments.MainFragment"
        android:label="@string/main_menu_title"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_aboutMedCentrFragment"
            app:destination="@id/aboutMedCenterFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/messagesFragment"
        android:name="com.example.medapp.presentation.fragments.MessagesFragment"
        android:label="@string/messages_menu_title"
        tools:layout="@layout/fragment_messages" />
    <fragment
        android:id="@+id/myHealthFragment"
        android:name="com.example.medapp.presentation.fragments.MyHealthFragment"
        android:label="@string/health_menu_title"
        tools:layout="@layout/fragment_my_health" />
    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.example.medapp.presentation.fragments.NotificationFragment"
        android:label="@string/notification_menu_title"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.medapp.presentation.fragments.ProfileFragment"
        android:label="@string/profile_menu_title"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/aboutMedCenterFragment"
        android:name="com.example.medapp.presentation.fragments.AboutMedCenterFragment"
        android:label="fragment_about_med_centr"
        tools:layout="@layout/fragment_about_med_center" >
        <action
            android:id="@+id/action_aboutMedCentrFragment_to_medCenterDescriptionFragment"
            app:destination="@id/medCenterDescriptionFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/medCenterDescriptionFragment"
        android:name="com.example.medapp.presentation.fragments.MedCenterDescriptionFragment"
        android:label="fragment_med_center_discription"
        tools:layout="@layout/fragment_med_center_discription" />
</navigation>
